[project]
name = "realtime-threat-detection-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langfuse>=3.10.1",
    "langgraph>=1.0.3",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
